--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-106814418\testng-customsuite.xml</span>
+                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--631101458\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Pankaj Advani, IND, Snooker, 20)">createProject(Pankaj Advani, IND, Snooker, 20)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Alon, Tesla, Owner, 99)">createProject(Alon, Tesla, Owner, 99)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Virat, RCB, Cricket, 57)">createProject(Virat, RCB, Cricket, 57)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Virat, RCB, Cricket, 57)">createProject(Virat, RCB, Cricket, 57)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Auth.OAuth2" class="method navigator-link" hash-for-method="oAuth2">oAuth2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,39 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Dataprovider.DataProviderTest</span>
+              <span class="class-name">Auth.OAuth2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createProject(Pankaj Advani, IND, Snooker, 20)">
-                  </a> <!-- createProject(Pankaj Advani, IND, Snooker, 20) -->
-                  <span class="method-name">createProject</span>
-                  <span class="parameters">(Pankaj Advani,IND,Snooker,20)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createProject(Alon, Tesla, Owner, 99)">
-                  </a> <!-- createProject(Alon, Tesla, Owner, 99) -->
-                  <span class="method-name">createProject</span>
-                  <span class="parameters">(Alon,Tesla,Owner,99)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createProject(Virat, RCB, Cricket, 57)">
-                  </a> <!-- createProject(Virat, RCB, Cricket, 57) -->
-                  <span class="method-name">createProject</span>
-                  <span class="parameters">(Virat,RCB,Cricket,57)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createProject(Virat, RCB, Cricket, 57)">
-                  </a> <!-- createProject(Virat, RCB, Cricket, 57) -->
-                  <span class="method-name">createProject</span>
-                  <span class="parameters">(Virat,RCB,Cricket,57)</span>
+                  <a name="oAuth2">
+                  </a> <!-- oAuth2 -->
+                  <span class="method-name">oAuth2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -176,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-106814418\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--631101458\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Dataprovider.DataProviderTest&quot;/&gt;
+      &lt;class name=&quot;Auth.OAuth2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -225,28 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createProject')
-data.setCell(0, 2, 'Dataprovider.DataProviderTest')
-data.setCell(0, 3, 2770);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createProject')
-data.setCell(1, 2, 'Dataprovider.DataProviderTest')
-data.setCell(1, 3, 86);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createProject')
-data.setCell(2, 2, 'Dataprovider.DataProviderTest')
-data.setCell(2, 3, 80);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'createProject')
-data.setCell(3, 2, 'Dataprovider.DataProviderTest')
-data.setCell(3, 3, 70);
+data.setCell(0, 1, 'oAuth2')
+data.setCell(0, 2, 'Auth.OAuth2')
+data.setCell(0, 3, 4319);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -272,22 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Dataprovider.DataProviderTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Auth.OAuth2</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">createProject(Virat, RCB, Cricket, 57)</span>
+                <span class="method-name">oAuth2</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">createProject(Pankaj Advani, IND, Snooker, 20)</span>
-                <span class="method-start">2787 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">createProject(Alon, Tesla, Owner, 99)</span>
-                <span class="method-start">2872 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">createProject(Virat, RCB, Cricket, 57)</span>
-                <span class="method-start">2963 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
