--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="809879">  <td>24/03/25 10:08:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.createProject(java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:Dataprovider.DataProviderTest@38425407]">createProject</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="809879">  <td>24/03/25 10:08:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.createProject(java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:Dataprovider.DataProviderTest@38425407]">createProject</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="809879">  <td>24/03/25 10:08:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.createProject(java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:Dataprovider.DataProviderTest@38425407]">createProject</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="809879">  <td>24/03/25 10:08:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.createProject(java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:Dataprovider.DataProviderTest@38425407]">createProject</td> 
+<tr bgcolor="ebbee5">  <td>24/03/25 16:23:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateProject.createProject()[pri:0, instance:JDBC.CreateProject@5bf0d49]">createProject</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
